--- a/DEPT_API/Views/Search/Index.cshtml
+++ b/DEPT_API/Views/Search/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Movie trailer finder</h2>
 
 @using (Html.BeginForm("Index", "Search", FormMethod.Get))
 { 
@@ -13,6 +13,11 @@
 
 <div>
     <h4>TrailerModel</h4>
+    <iframe src="@Html.DisplayFor(model => model.LinkEmbed)"
+            width="860"
+            height="480"
+            frameborder="0"
+            allowfullscreen></iframe>
     <hr />
     <dl class="dl-horizontal">
         <dt>
