--- a/DEPT_API/Views/Search/Index.cshtml
+++ b/DEPT_API/Views/Search/Index.cshtml
@@ -29,11 +29,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.VideoUrl)
+            @Html.DisplayNameFor(model => model.YtVideoUrl)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.VideoUrl)
+            @Html.DisplayFor(model => model.YtVideoUrl)
         </dd>
 
         <dt>
@@ -45,27 +45,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.VideoTitle)
+            @Html.DisplayNameFor(model => model.ImdbVideoUrl)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.VideoTitle)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Link)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Link)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LinkEmbed)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LinkEmbed)
+            @Html.DisplayFor(model => model.ImdbVideoUrl)
         </dd>
 
     </dl>
