Fixed API view crash

--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using DEPT_API.Areas.HelpPage
+@using DEPT_Api.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
