--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using DEPT_API.Areas.HelpPage
-@using DEPT_API.Areas.HelpPage.Models
+@using DEPT_Api.Areas.HelpPage
+@using DEPT_Api.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
