--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using DEPT_API.Areas.HelpPage.ModelDescriptions
+@using DEPT_Api.Areas.HelpPage.ModelDescriptions
 @model ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
