--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/DictionaryModelDescription.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/DictionaryModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using DEPT_API.Areas.HelpPage.ModelDescriptions
+@using DEPT_Api.Areas.HelpPage.ModelDescriptions
 @model DictionaryModelDescription
 Dictionary of @Html.DisplayFor(m => Model.KeyModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.KeyModelDescription }) [key]
 and @Html.DisplayFor(m => Model.ValueModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.ValueModelDescription }) [value]
