--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using DEPT_API.Areas.HelpPage.Models
-@using DEPT_API.Areas.HelpPage.ModelDescriptions
+@using DEPT_Api.Areas.HelpPage.Models
+@using DEPT_Api.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
