--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
@@ -1,4 +1,4 @@
-@using DEPT_API.Areas.HelpPage.ModelDescriptions
+@using DEPT_Api.Areas.HelpPage.ModelDescriptions
 @model Type
 @{
     ModelDescription modelDescription = ViewBag.modelDescription;
