--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.ObjectModel
 @using System.Web.Http.Description
 @using System.Threading
-@using DEPT_API.Areas.HelpPage.ModelDescriptions
+@using DEPT_Api.Areas.HelpPage.ModelDescriptions
 @model IList<ParameterDescription>
 
 @if (Model.Count > 0)
