--- a/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using DEPT_API.Areas.HelpPage.ModelDescriptions
+@using DEPT_Api.Areas.HelpPage.ModelDescriptions
 @model SimpleTypeModelDescription
 @Model.Documentation
