--- a/DEPT_API/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/DEPT_API/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using DEPT_API.Areas.HelpPage.Models
+@using DEPT_Api.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
